Fix api, routes, schemas
