# models.py
@@ -1,4 +1,4 @@
-from datetime import date
+from datetime import datetime
 from config import db, ma
 from marshmallow import fields
 
@@ -8,16 +8,7 @@ class Rubric(db.Model):
     rubric_id = db.Column(db.Integer, primary_key=True)
     rubric_name = db.Column(db.String(32))
     rubric_marks = db.Column(db.String(10))
-    rubric_parent = db.Column(db.Integer, db.ForeignKey("rubric.rubric_id"))
-
-    ads = db.relationship(
-        "Ad",
-        backref="rubric",
-        cascade="all, delete, delete-orphan",
-        single_parent=True,
-        order_by="desc(Ad.ad_date)"
-
-    )
+    rubric_parent = db.Column(db.Integer)
 
 
 class User(db.Model):
@@ -30,7 +21,7 @@ class User(db.Model):
         backref="user",
         cascade="all, delete, delete-orphan",
         single_parent=True,
-        order_by="desc(Ad.ad_date)",
+        order_by="desc(Ad.ad_timestamp)",
     )
 
 
@@ -38,26 +29,31 @@ class Ad(db.Model):
     __tablename__ = "ad"
     ad_id = db.Column(db.Integer, primary_key=True)
     ad_text = db.Column(db.String(512), nullable=False)
-    ad_rubric = db.Column(db.Integer, db.ForeignKey("rubric.rubric_id"))
+    ad_rubric = db.Column(db.Integer)
     ad_frame = db.Column(db.Integer, default=0)
     ad_owner = db.Column(db.Integer, db.ForeignKey("user.user_id"))
-    ad_date = db.Column(
-        db.Date, default=date.today(), onupdate=date.today()
+    ad_timestamp = db.Column(
+        db.DateTime, default=datetime.utcnow(), onupdate=datetime.utcnow()
     )
 
 
-class AdSchema(ma.SQLAlchemyAutoSchema):
+class RubricAdUserSchema(ma.SQLAlchemyAutoSchema):
+    class Meta:
+        model = Rubric
+        load_instance = True
 
+    ads = fields.Nested(lambda: AdSchema(exclude=("rubric",)), default=None)
+
+
+class AdSchema(ma.SQLAlchemyAutoSchema):
     class Meta:
         model = Ad
         load_instance = True
 
     user = fields.Nested(lambda: UserSchema(exclude=("ads",)), default=None)
-    rubric = fields.Nested(lambda: RubricSchema(exclude=("ads",)), default=None)
 
 
 class UserSchema(ma.SQLAlchemyAutoSchema):
-
     class Meta:
         model = User
         load_instance = True
@@ -66,10 +62,6 @@ class UserSchema(ma.SQLAlchemyAutoSchema):
 
 
 class RubricSchema(ma.SQLAlchemyAutoSchema):
-
     class Meta:
         model = Rubric
         load_schema = True
-
-    ads = fields.Nested(AdSchema, default=[], many=True)
-
