# swagger.yml
@@ -33,22 +33,104 @@ paths:
                 user_phone:
                   type: string
                   description: Phone number of the user
-                ads:
-                  type: array
-                  items:
-                    properties:
-                      ad_owner:
-                        type: integer
-                        description: Id of user this ad is associated with
-                      ad_id:
-                        type: integer
-                        description: Id of this ad
-                      ad_text:
-                        type: string
-                        description: content of this ad
-                      date:
-                        type: string
-                        description: Create/Update date of this ad
+#                ads:
+#                  type: array
+#                  items:
+#                    properties:
+#                      ad_id:
+#                        type: integer
+#                        description: Id of this ad
+#                      ad_text:
+#                        type: string
+#                        description: content of this ad
+#                      ad_rubric:
+#                        type: integer
+#                        description: Id of rubric this ad is associated with
+#                      ad_frame:
+#                        type: integer
+#                        description: frame
+#                      ad_owner:
+#                        type: integer
+#                        description: Id of user this ad is associated with
+#                      ad_timestamp:
+#                        type: string
+#                        description: Create/Update date of this ad
+    post:
+      operationId: user.create
+      tags:
+        - User
+      summary: Create the user and store his to the db
+      description: Create the user and store his to the db
+      parameters:
+        - name: user
+          in: body
+          description: User to create
+          required: True
+          schema:
+            type: object
+            properties:
+              user_phone:
+                type: string
+                description: User's number created
+      responses:
+        201:
+          description: The user successfuly added
+          schema:
+            properties:
+              user_id:
+                type: integer
+                description: Id of the user
+              user_phone:
+                type: string
+                description: Phone number of the user
+
+  /user/{user_id}:
+    get:
+      operationId: user.read_one
+      tags:
+        - User
+      summary: Show all user's ads
+      description: Show all the user's ads
+      parameters:
+        - name: user_id
+          in: path
+          description: Id of the user to get
+          type: integer
+          required: True
+      responses:
+        200:
+          description: Successfully read user from user data operation
+          schema:
+            type: object
+            properties:
+              user_id:
+                type: string
+                description: Id of the user
+              user_phone:
+                type: string
+                description: Phone number of the user
+              ads:
+                type: array
+                items:
+                  properties:
+                    ad_id:
+                      type: integer
+                      description: Id of this add
+                    ad_text:
+                      type: string
+                      description: content of this ad
+                    ad_rubric:
+                      type: integer
+                      description: Id of rubric this ad is associated with
+                    ad_frame:
+                      type: integer
+                      description: Flag of needs published this ad in frame
+                    ad_owner:
+                      type: integer
+                      description: Id of user this ad is associated with
+                    ad_timestamp:
+                      type: string
+                      description: Create/Update timestamp of this ad
 
   /ads:
     get:
@@ -64,24 +146,28 @@ paths:
               type: array
               items:
                 properties:
-                  ad_id:
-                    type: integer
-                    description: Id of the ad
-                  contentad_text:
-                    type: string
-                    description: Content of the ad
-                  date:
-                    type: string
-                    description: Create/Update date of the ad
-                  user:
-                    type: object
-                    properties:
-                      user_id:
-                        type: integer
-                        description: Id of associated user
-                      user_phone:
-                        type: string
-                        description: Phone number of associated user
+                  ads:
+                    type: array
+                    items:
+                      properties:
+                        ad_id:
+                          type: integer
+                          description: Id of this ad
+                        ad_text:
+                          type: string
+                          description: content of this ad
+                        ad_rubric:
+                          type: integer
+                          description: Id of rubric this ad is associated with
+                        ad_frame:
+                          type: integer
+                          description: frame
+                        ad_owner:
+                          type: integer
+                          description: Id of user this ad is associated with
+                        ad_timestamp:
+                          type: string
+                          description: Create/Update date of this ad
 
   /rubrics:
     get:
@@ -106,25 +192,3 @@ paths:
                 rubric_marks:
                   type: string
                   description: different marks for designer
-                rubric_parent:
-                  type: integer
-                  description: parent of the rubric for build relation structure
-                ads:
-                  type: array
-                  items:
-                    properties:
-                      ad_owner:
-                        type: integer
-                        description: Id of user this ad is associated with
-                      ad_id:
-                        type: integer
-                        description: Id of this ad
-                      ad_text:
-                        type: string
-                        description: content of this ad
-                      ad_date:
-                        type: string
-                        description: Create/Update date of this note
-                      ad_frame:
-                        type: boolean
-                        description: The ad in frame or not
